# libudjat

./: .gitignore  .lgtm.yml  CHANGELOG  Makefile.in  PKGBUILD.mingw  README.md  autogen.sh  configure.ac  dbgversion.sh  dynamic.pc.in  libudjat.cbp  link.sh  meson.build  rpm.macros  static.pc.in  subprocess.bat  test.xml  unlink.sh  valgrind.suppression
.github/workflows/: codeql-analysis.yml  codeql.yml  msys2.yml  publish.yml  wincheck.yml
.obs/: workflows.yml
agent/: Makefile.in  configure.ac  udjat.cbp
agent/doxygen/: doxyfile.in
agent/sample/: Makefile.in  configure.ac  sample.cbp
agent/sample/src/: config.h.in  sample.cc
agent/src/core/: core.cbp  private.h
agent/src/core/agent/: agent.cbp  agent.cc  controller.cc  factory.cc  load.cc  private.h  test.xml
agent/src/core/state/: state.cc
agent/src/core/testprogram/: testprogram.cc
agent/src/core/tools/: dmi.cc  memorymappedfile.cc  string.cc  timestamp.cc  tools.cbp  xml.cc
agent/src/include/: udjat.h
agent/src/include/udjat/: agent.h  configuration.h  defs.h  string.h  threadpool.h  timestamp.h
agent/src/testprogram/: testprogram.cc
conf.d/: 00-defaults.conf  00-devel.conf
core/: Makefile.in  autogen.sh  configure.ac  libudjat.cbp
core/conf.d/: 00-defaults.conf
core/sdk/: pkg-config.pc.in
core/src/agent/: agent.cbp  agent.cc  controller.cc  load.cc
core/src/include/: config.h.in
core/src/include/udjat/: agent.h  defs.h  event.h  factory.h  notification.h  request.h  service.h  state.h  threadpool.h  worker.h
core/src/main/: factory.cc  private.h
core/src/main/agent/: agent.cbp  agent.cc  controller.cc  factory.cc  load.cc  private.h  state.cc  update.cc
core/src/main/event/: controller.cc  event.cbp  event.cc  notification.cc  private.h  test.xml
core/src/main/factory/: controller.cc  private.h
core/src/main/request/: controller.cc  private.h  request.cc  response.cc
core/src/main/service/: controller.cc  private.h  servicce.cbp
core/src/main/state/: parse.cc  private.h  state.cc
core/src/testprogram/: civetweb.cc  private.h  testprogram.cc
core/src/tools/: atom.cc  tools.cbp
debian/: changelog  changelog.in  control  control.in  libudjat.dsc  libudjat.dsc.in  rules  shlibs  shlibs.in
doc/: doxyfile.in  openapi.yaml
doxygen/: doxyfile.in
legacy/: Makefile.in  autogen.sh  configure.ac  static.pc.in
locale/: libudjat.pot  pt_BR.po
po/: POTFILES.in  meson.build  pt_BR.po
rpm/: _service  _servicedata  libudjat.spec  macros  macros.in  mingw64-libudjat.spec
sdk/: dynamic.pc.in  pkg-config.pc.in  static.pc.in
sdk/linux/: dynamic.pc.in  static.pc.in
sdk/windows/: dynamic.pc.in  static.pc.in
src/: core.cbp  private.h
src/include/: config.h.in  udjat-internals.h  udjat.h
src/include/private/: action.h  agent.h  alert.h  configuration.h  crypto.h  dialog.h  event.h  factory.h  filewatcher.h  logger.h  mainloop.h  misc.h  module.h  protocol.h  randomfactory.h  request.h  service.h  ssl.h  state.h  updater.h  url.h  urlparser.h  win32.h  worker.h
src/include/udjat/: action.h  agent.h  alert.h  dbus.h  defs.h  event.h  factory.h  level.h  loader.h  module.h  moduleinfo.h  request.h  state.h  subprocess.h  tests.h  url.h  version.h.in  worker.h
src/main/agent/: agent.cc  alertfactory.cc  child.cc  compare.cc  controller.cc  factory.cc  get.cc  load.cc  loadfromfile.cc  parse.cc  path.cc  private.h  properties.cc  root.cc  set.cc  setup.cc  start.cc  state.cc  test.xml  tools.cc  update.cc
src/main/alert/: abstract.cc  activation.cc  active.cc  alert.cc  controller.cc  event.cc  factory.cc  file.cc  init.cc  private.h  script.cc  settings.cc  url.cc  worker.cc
src/main/event/: controller.cc  event.cbp  event.cc  notification.cc
src/main/factory/: controller.cc  factory.cc  private.h  search.cc
src/main/file/: agent.cc  agent_controller.cc  controller.cc  file.cc  list.cc  local.cc  private.h  sysconfig.cc  watcher.cc
src/main/load/: updater.cc  xml.cc
src/main/module/: controller.cc  info.cc  load.cc  module.cc  private.h  unload.cc
src/main/request/: exec.cc  report.cc  request.cc  response.cc  responseobject.cc
src/main/service/: controller.cc  private.h
src/main/state/: alertfactory.cc  child.cc  level.cc  parse.cc  state.cc
src/main/url/: controller.cc  fileprotocol.cc  method.cc  private.h  protocol.cc  response.cc  url.cc
src/main/worker/: controller.cc  private.h  worker.cc
src/testprogram/: application.cc  civetweb.cc  loader.cc  main.cc  private.h  randomfactory.cc  run.cc  service.cc  testprogram.cc  tests.cc
src/testprogram/windows/: app-manifest.xml.in  resources.rc.in
src/tools/: activatable.cc  application.cc  arguments.cc  base64.cc  cache.cc  configuration.cc  configvalue.cc  diskstat.cc  dummy.cc  event.cc  event.h  eventcontroller.cc  exception.cc  expand.cc  file.cc  ip.cc  logger.cc  message.cc  mimetype.cc  mmap.cc  nic.cc  object.cc  quark.cc  requestpath.cc  script.cc  shortcut.cc  string.cc  subprocess.cc  systemservice.cc  timestamp.cc  tools.cbp  value.cc  virtualmachine.cc  xml.cc
src/tools/abstract/: response.cc
src/tools/application/: application.cc  init.cc  run.cc  setup.cc
src/tools/file/: abstract.cc  agent.cc  file.cc  handler.cc  path.cc  private.h  sysconfig.cc  sysconfig_value.cc  text.cc  watcher.cc
src/tools/http/: client.cc  error.cc  exception.cc  mimetype.cc  timestamp.cc
src/tools/mainloop/: default.cc  handler.cc  mainloop.cbp  mainloop.cc  private.h  service.cc  timer.cc
src/tools/service/: controller.cc
src/tools/string/: expand.cc  string.cc  xml.cc
src/tools/subprocess/: private.h  subprocess.cc
src/tools/testprogram/: testprogram.cc
src/tools/url/: call.cc  controller.cc  exception.cc  fileprotocol.cc  header.cc  method.cc  private.h  protocol.cc  response.cc  unescape.cc  url.cc  watcher.cc  worker.cc
src/tools/value/: abstract.cc  html.cc  json.cc
src/tools/xml/: attribute.cc  document.cc  misc.cc
subprojects/: libeconf.wrap  vmdetect.wrap
win/: ci-build.sh  mingw64-libudjat.spec
win/x86_64/: CHANGELOG  _service  mingw64-libudjat.spec
(+306 files in other folders)
